@@ -1,3 +1,7 @@
+* Thu Aug 25 2016 Nick Markowski <nmarkowski@keywcorp.com> 4.5.2-0
+- Defaulted export sec to sys.
+- Updated documentation to reflect krb5 integration with manual changes.
+
 * Fri Aug 12 2016 Nick Miller <nick.miller@onyxpoint.com> - 4.5.1-0
 - Added a new README
 
